support building a gcc as well rename the project to osxcross bump version to 0.4

--- a/README
+++ b/README
@@ -1,8 +1,10 @@
-- Oclang: OS X cross toolchain for linux -
+- OSXCross: OS X cross toolchain for linux -
 
-Oclang is a tool which helps you to cross compile source code easily with clang on linux for OS X.
+OSXCross is a tool which helps you to cross compile source code easily with clang on linux for OS X.
 
 After the installation you will have "o32-clang", "o32-clang++", "o64-clang" and "o64-clang++" available as compiler.
+
+You can optionally build an update-to-date gcc as well, please see README.gcc.
 
 Make sure you have the following installed on your linux-system:
 
