add libc++ build script update README with libc++ build instructions and samples fix mavericks SDK download link (pointed to 10.8) build xar only for <=10.5 add -g0 to the clang invocation command to avoid dsymutil from being run (debugging is not supported, but I guess you don't want to debug the resulting binaries anyway if you build them on a non OS X system) attempt to make the toolchain less path dependent (gcc still breaks though, because of hardcoded paths), but clang and cctools can be moved now update cctools to 845 add DISABLE_LTO_SUPPORT option (DISABLE_LTO_SUPPORT=1 ./build.sh) to disable linking against libLTO.so add support for 32 bit systems add FreeBSD support update PACKAGE script

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 0.5:
 - fixed: help clang to find its own intrinsic headers (this issue appears to be fixed in clang 3.4+)
+- changed: attempt to make the toolchain less path dependent
+- fixed: building the toolchain on 32 bit systems
+- added: libc++ support (for both, clang and gcc)
+- changed: update cctools to 845
+- added: FreeBSD support
 
 0.4:
 - added: gcc support
