--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,8 @@ added:
  * 10.6 SDK support (10.4-10.9 are all supported now)
  * 'sw_vers' tool, which is required by some projects
  * '-stdlib=' support for gcc (as an extension through the wrapper)
+ * 'OSXCROSS_C_STANDARD' env var (set C standard globally)
+ * 'OSXCROSS_CXX_STANDARD' env var (set C++ standard globally)
  * OS X support (as host)
 
 changed:
