--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,10 @@ changed:
  * updated cctools to 855 with ld64-236.3 (Xcode 5.1)
  * gcc 4.9.0 -> gcc 4.9.1
 
+added:
+ * support for new '-arch x86_64h' (requires clang 3.5+)
+ * support for multiple '-arch' flags with gcc
+
 /******************************* v0.7 *******************************/
 
 added:
