update gcc to 4.9.1

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@
 
 changed:
  * updated cctools to 855 with ld64-236.3 (Xcode 5.1)
+ * gcc 4.9.0 -> gcc 4.9.1
 
 /******************************* v0.7 *******************************/
 
