update cctools to 862 and ld64 to 241.9
port changes:
- misc fixes
- add '-L/usr/pkg/lib' for NetBSD
- update libobjc2 to r37977
- silence / fix libobjc2 warnings
- remove freebsd ifdef in favor of '-isystem /usr/local'
- add installhdrs target (cctools-port/issues/2)
- prefer glibtoolize over libtoolize
- add support for OS X and iOS as host system (cctools-port/issues/1)
- add a workaround for a glibc 2.20 bug
- link with -rpath to ease finding libLTO
- check for __cxa_demangle in -lstdc++
- use std=c++0x instead of -std=gnu++0x
- fix ld64 to compile with libstdc++
- fix automake warnings
- ld64: enable all architectures

This also gets rid of the automake dependency.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,14 @@
+/******************************* v0.9 *******************************/
+
+changed:
+ * updated cctools to 862
+ * updated ld64 to 241.9
+
 /******************************* v0.8 *******************************/
 
 changed:
- * updated cctools to 855 with ld64-236.3 (Xcode 5.1)
+ * updated cctools to 855
+ * updated ld64 to 236.3
  * gcc 4.9.0 -> gcc 4.9.2
 
 added:
