--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,14 @@
-Thomas Poechtrager  (t.poechtrager@gmail.com)
-Don Bright          (hugh.m.bright@gmail.com)
+N: Thomas Poechtrager
+E: t.poechtrager@gmail.com
+D: OSXCross, cctools/ld64 port
 
+N: Cjacker
+W: https://code.google.com/p/ios-toolchain-based-on-clang-for-linux
+D: cctools/ld64 port
+
+N: Don Bright
+E: hugh.m.bright@gmail.com
+D: tools/get_dependencies.sh
+
+N: Marcel Wysocki
+D: Initial MacPorts script (https://github.com/maci0/pmmacports)
