--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,7 @@ changed:
 * improved and colorized wrapper error/warning/debug/info messages
 
 added:
+* support for ccache symlinks
 * darling-dmg sdk packaging script
 * include path warnings for /usr/include and /usr/local/include
   (can be switched off via 'OSXCROSS_NO_INCLUDE_PATH_WARNINGS=1')
