Update cctools to 877.5 and ld64 to 253.3
This finally adds support for Xcode 7 / El Capitan.

With this commit I am also removing ld64-134.9 support.
I kept ld64-134.9 for users with an old C++ standard library.
A decent C++ standard library with C++11 support is now mandatory.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+/****************************** v0.12 ********************************/
+
+changed:
+ * updated cctools to 877.5
+ * updated ld64 to 253.3
+
+added:
+ * support for Xcode 7.x / El Capitan
+
 /****************************** v0.11 ********************************/
 
 changed:
