Update cctools to 877.8 and ld64 to 253.9

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+/****************************** v0.13 ********************************/
+
+changed:
+ * updated cctools to 877.8
+ * updated ld64 to 253.9
+
 /****************************** v0.12 ********************************/
 
 changed:
