--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,162 +1,176 @@
+/****************************** v0.15 ********************************/
+
+Changed:
+ * Updated cctools to 895
+ * Updated ld64 to 274.2 (without TAPIv2 support)
+
+Added:
+ * Support for ThinLTO:
+   -> https://clang.llvm.org/docs/ThinLTO.html
+   -> http://blog.llvm.org/2016/06/thinlto-scalable-and-incremental-lto.html
+   -> Requires LLVM/Clang >= 3.8. LLVM/Clang >= 3.9 is recommended.
+ * USE_CLANG_AS build.sh option:
+   -> Use Clang as assembler.
+
 /****************************** v0.14 ********************************/
 
-changed:
- * updated cctools to 886
- * updated ld64 to 264.3.102
+Changed:
+ * Updated cctools to 886
+ * Updated ld64 to 264.3.102
 
 /****************************** v0.13 ********************************/
 
-changed:
- * updated cctools to 877.8
- * updated ld64 to 253.9
+Changed:
+ * Updated cctools to 877.8
+ * Updated ld64 to 253.9
 
 /****************************** v0.12 ********************************/
 
-changed:
- * updated cctools to 877.5
- * updated ld64 to 253.3
+Changed:
+ * Updated cctools to 877.5
+ * Updated ld64 to 253.3
 
-added:
- * support for Xcode 7.x / El Capitan
+Added:
+ * Support for Xcode 7.x / El Capitan
 
 /****************************** v0.11 ********************************/
 
-changed:
-* '-oc-use-gcc-libs' has been renamed to '-foc-use-gcc-libstdc++'
-* support for generating fat object files with gcc and '-foc-use-gcc-libstdc++'
-  has been removed.
-* support for setting the language standard via
- 'OSXCROSS_C_STANDARD' / 'OSXCROSS_CXX_STANDARD' (env) has been removed
+Changed:
+ * '-oc-use-GCC-libs' has been renamed to '-foc-use-GCC-libstdc++'
+ * Support for generating fat object files with GCC and '-foc-use-GCC-libstdc++'
+   has been removed.
+ * Support for setting the language standard via
+  'OSXCROSS_C_STANDARD' / 'OSXCROSS_CXX_STANDARD' (env) has been removed
 
-added:
-* support for '-stdc++' and '-gstdc++' compiler "shortcuts"
-  o32-clang++ --> uses libstdc++ for <= 10.8 and libc++ for >= 10.9
-  o32-clang++-libc++ --> uses the SDK's libc++
-  o32-clang++-stdc++ --> uses the SDK's libstdc++
-  o32-clang++-gstdc++ --> uses gcc's (build_gcc.sh) libstdc++
-* unit tests (wrapper)
-* llvm-dsymutil build script
-* dsymutil is now wrapped to llvm-dsymutil (LLVM >= 3.8 only)
+Added:
+ * Support for '-stdc++' and '-gstdc++' compiler "shortcuts"
+   o32-clang++ --> uses libstdc++ for <= 10.8 and libc++ for >= 10.9
+   o32-clang++-libc++ --> uses the SDK's libc++
+   o32-clang++-stdc++ --> uses the SDK's libstdc++
+   o32-clang++-gstdc++ --> uses GCC's (build_GCC.sh) libstdc++
+ * Unit tests (wrapper)
+ * llvm-dsymutil build script
+ * dsymutil is now wrapped to llvm-dsymutil (LLVM >= 3.8 only)
 
 /****************************** v0.10 ********************************/
 
-changed:
-* improved and colorized wrapper error/warning/debug/info messages
-* updated cctools to 870
-* updated ld64 to 242
+Changed:
+ * Improved and colorized wrapper error/warning/debug/info messages
+ * Updated cctools to 870
+ * Updated ld64 to 242
 
-added:
-* Windows support via Cygwin
-* OpenBSD and DragonFlyBSD support
-* Linux ARM support
-* Linux PPC/PPC64 support: Totally untested, but compiles
-* gcc compiler support: OSXCross can now be built with gcc
-* 'osxcross-man' man page tool
-* p7zip sdk packaging script
-* a minimalistic xcrun tool
-* support for ccache symlinks
-* darling-dmg sdk packaging script
-* include path warnings for /usr/include and /usr/local/include
-  (can be switched off via 'OSXCROSS_NO_INCLUDE_PATH_WARNINGS=1')
-* an option to silence osxcross extension warnings
-  (OSXCROSS_NO_EXTENSION_WARNINGS=1)
+Added:
+ * Windows support via Cygwin
+ * OpenBSD and DragonFlyBSD support
+ * Linux ARM support
+ * Linux PPC/PPC64 support: Totally untested, but compiles
+ * GCC compiler support: OSXCross can now be built with GCC
+ * 'osxcross-man' man page tool
+ * p7zip sdk packaging script
+ * A minimalistic xcrun tool
+ * Support for ccache symlinks
+ * darling-dmg sdk packaging script
+ * include path warnings for /usr/include and /usr/local/include
+   (can be switched off via 'OSXCROSS_NO_INCLUDE_PATH_WARNINGS=1')
+ * An option to silence osxcross extension warnings
+   (OSXCROSS_NO_EXTENSION_WARNINGS=1)
 
 /******************************* v0.9 *******************************/
 
-changed:
- * updated cctools to 862
- * updated ld64 to 241.9
+Changed:
+ * Updated cctools to 862
+ * Updated ld64 to 241.9
 
-added:
+Added:
  * binutils / gdb build script
  * OSXCROSS_GCC_NO_STATIC_RUNTIME option (env)
- * osxcross-macports: a minimalistic macports packet manager
+ * osxcross-macports: A minimalistic macports packet manager
 
 /******************************* v0.8 *******************************/
 
-changed:
- * updated cctools to 855
- * updated ld64 to 236.3
- * gcc 4.9.0 -> gcc 4.9.2
+Changed:
+ * Updated cctools to 855
+ * Updated ld64 to 236.3
+ * GCC 4.9.0 -> GCC 4.9.2
 
-added:
- * support for new '-arch x86_64h' (requires clang 3.5+)
- * support for multiple '-arch' flags with gcc
- * scripts to make sdk extraction possible on linux (xcode 4.2 only)
+Added:
+ * Support for new '-arch x86_64h' (requires Clang 3.5+)
+ * Support for multiple '-arch' flags with GCC
+ * Scripts to make sdk extraction possible on linux (xcode 4.2 only)
  * OS X 10.10 support (DP1)
  * pkg-config wrapper
 
 /******************************* v0.7 *******************************/
 
-added:
- * new compiler wrapper written in C++
- * '-oc-use-gcc-libs' option (uses './build_gcc.sh' libstdc++)
+Added:
+ * New compiler wrapper written in C++
+ * '-oc-use-GCC-libs' option (uses './build_GCC.sh' libstdc++)
  * 10.6 SDK support (10.4-10.9 are all supported now)
  * 'sw_vers' tool, which is required by some projects
- * '-stdlib=' support for gcc (as an extension through the wrapper)
+ * '-stdlib=' support for GCC (as an extension through the wrapper)
  * 'OSXCROSS_C_STANDARD' env var (set C standard globally)
  * 'OSXCROSS_CXX_STANDARD' env var (set C++ standard globally)
  * OS X support (as host)
 
-changed:
+Changed:
  * 'osxcross-conf', 'osxcross-env' and the (fake) 'dsymutil' are now
    implemented in the wrapper
- * <arch>-apple-darwinXX-cc/c++ defaults now to clang
- * switched to two-space indents
- * gcc 4.8.2 -> gcc 4.9.0
+ * <arch>-apple-darwinXX-cc/c++ defaults now to Clang
+ * Switched to two-space indents
+ * GCC 4.8.2 -> GCC 4.9.0
 
 fixed:
  * 'MACOSX_DEPLOYMENT_TARGET' env var is now handled correctly
 
 /******************************* v0.6 *******************************/
 
-added:
+Added:
  * NetBSD support
- * dependencies installer script (Don Bright)
+ * Dependencies installer script (Don Bright)
  * SDK packaging script
 
 /******************************* v0.5 *******************************/
 
-added:
- * libc++ support (for both, clang and gcc)
+Added:
+ * libc++ support (for both, Clang and GCC)
  * FreeBSD support
 
-changed:
- * attempt to make the toolchain less path dependent
- * updated cctools to 845
+Changed:
+ * Attempt to make the toolchain less path dependent
+ * Updated cctools to 845
 
 fixed:
- * help clang to find its own intrinsic headers
-   (this issue appears to be fixed in clang 3.4+)
- * building the toolchain on 32 bit systems
+ * Help Clang to find its own intrinsic headers
+   (this issue appears to be fixed in Clang 3.4+)
+ * Building the toolchain on 32 bit systems
 
 /******************************* v0.4 *******************************/
 
-added:
-  * gcc build script
-  * a workaround for buggy unistd.h headers
+Added:
+ * GCC build script
+ * A workaround for buggy unistd.h headers
 
 /******************************* v0.3 *******************************/
 
-added:
-  * 10.9 SDK support
-  * *-apple-darwin*-clang* symlinks (same as invoking oXX-clang)
+Added:
+ * 10.9 SDK support
+ * *-apple-darwin*-clang* symlinks (same as invoking oXX-clang)
 
-changed:
-  * no need to build extra cctools binaries for targeting i386,
-    symlinking the x86_64 builds works as well
+Changed:
+ * No need to build extra cctools binaries for targeting i386,
+   symlinking the x86_64 builds works as well
 
 /******************************* v0.2 *******************************/
 
-added:
-  * a check for broken unistd.h
-  * comments to build.sh
+Added:
+ * A check for broken unistd.h
+ * Comments to build.sh
 
-changed:
-  * updated cctools to 839 with ld64-134.9
+Changed:
+ * Updated cctools to 839 with ld64-134.9
 
-fixed:
-  * check if MacOSX package is present in tarballs
+Fixed:
+ * Check if MacOSX package is present in tarballs
 
 /******************************* v0.1 *******************************/
 
